# phishing-url-detector

./: .gitignore  README.md  requirements.txt  results.csv  urls.txt  writeup.md
data/: feature_list.txt
models/: training_metrics.json
notebooks/: 01_exploration.ipynb  02_eda.ipynb  03_baseline_model.ipynb  04_random_forest.ipynb
src/: features.py  predict.py  train.py
tests/: pyproject.toml  test_features.py  test_predict.py
