[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-url-detector"
version = "0.1.0"
description = "Machine learning tool for classifying URLs as phishing or legitimate."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Cole Downing" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "typer>=0.9.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
]

# This is the magic — exposes `phishing-detector` as a shell command.
# After `pip install -e .` users can just type `phishing-detector predict <url>`.
[project.scripts]
phishing-detector = "src.predict:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
